--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -6,6 +6,6 @@
   <%= f.label :content_body %>
   <%= f.text_area :content_body %>
   <%= f.label :rating %>
-  <%= f.text_area :rating %>
+  <%= f.text_field :rating %>
   <p><%= f.submit %></p>
 <% end %>
