--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @product.name %></h1>
-<h3><%= @product.price %></h3>
+<h3>$<%= @product.price %></h3>
 <h3>Imported From <%= @product.country %></h3>
 
 
