--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,20 +1,3 @@
 <h1>Edit product</h1>
 
-<% if @product.errors.any? %>
-  <h3>Please fix these errors:</h3>
-  <ul>
-    <% @product.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @product do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :price %>
-  <%= f.text_field :price %>
-  <%= f.label :country %>
-  <%= f.text_field :country %>
-  <%= f.submit  %>
-<% end %>
+<%= render "layouts/product_form" %>
