--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MariosSpecialty</title>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,8 +11,11 @@
   </head>
 
   <body>
+    <div class="container">
+
     <%= flash[:alert] %>
     <%= flash[:notice] %>
     <%= yield %>
+  </div>
   </body>
 </html>
