--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -4,10 +4,11 @@
 <h3>Review:</h3>
 <p><%= @review.content_body %></p>
 
-
-<p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
-<p><%= link_to "Delete review", product_review_path(@product, @review),
-                        :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
-
-<p><%= link_to "Return to product", product_path(@product) %></p>
+<% if current_user.admin %>
+  <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
+  <p><%= link_to "Delete review", product_review_path(@product, @review),
+                          :data => {:confirm => "Are you sure?",
+                          :method => "delete"} %></p>
+<% else %>
+  <p>Admin Only</p>
+<% end %>
