--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<h1> Sign up</h1>
+<%= form_for @user do |f| %>
+  <%= f.label "Email" %>
+  <%= f.text_field :email %>
+  <%= f.label "Password" %>
+  <%= f.password_field :password %>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.label "Admin?" %>
+  <%= f.check_box:admin %>
+  <br>
+  <%= f.submit "Sign Up" %>
+<% end %>
