--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,40 @@
 <h1>Products</h1>
 
 <% if @most_reviews.any? %>
+  <h2>Most Reviewed Products</h2>
   <ul>
     <% @most_reviews.each do |most_review| %>
-      <li><%= link_to most_review.content_body, review_path(most_review) %></li>
+      <li><%= link_to most_review.name, product_path(most_review) %></li>
     <% end %>
   </ul>
 <% else %>
-  <p>There are no most recent reviews yet.</p>
+  <p>There are no most recent reviews (yet).</p>
+<% end %>
+
+<% if @newest_products.any? %>
+  <h2>Newest Products</h2>
+  <ul>
+    <% @newest_products.each do |newest_product| %>
+      <li><%= link_to newest_product.name, product_path(newest_product) %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no newest products (yet).</p>
+<% end %>
+
+<% if @made_usas.any? %>
+  <h2>Top Products From the US of A</h2>
+  <ul>
+    <% @made_usas.each do |made_usas| %>
+      <li><%= link_to made_usas.name, product_path(made_usas) %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no newest products (yet).</p>
 <% end %>
 
 <% if @products.any? %>
+  <h2>All Products</h2>
   <ul>
     <% @products.each do |product| %>
       <li><%= link_to product.name, product_path(product) %></li>
