Change the admin to only allow registered uses to add reviews and to better present the CRUD functionality allowed to admin on the erb files

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,7 +1,4 @@
 <h1>Edit product</h1>
 
-<% if current_user.admin %>
-  <%= render "layouts/project_form" %>
-<% else %>
-  <p>Admin Only</p>
-<% end %>
+
+  <%= render "layouts/product_form" %>
