--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -5,10 +5,9 @@
 <p><%= @review.content_body %></p>
 
 <% if current_user.admin %>
+  <h3>Admin Only</h3>
   <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
   <p><%= link_to "Delete review", product_review_path(@product, @review),
                           :data => {:confirm => "Are you sure?",
                           :method => "delete"} %></p>
-<% else %>
-  <p>Admin Only</p>
 <% end %>
