--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,10 +22,10 @@
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
 <% if current_user.admin %>
+  <h3>Admin Only</h3>
   <p><%= link_to "Edit", edit_product_path(@product) %></p>
   <p><%= link_to "Delete product", product_path(@product),
                           :data => {:confirm => "Are you sure?",
                                          :method => "delete"} %></p>
- <% else %>
-   <p>Admin Only</p>
+
 <% end %>
