--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
 
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
-<% if current_user.admin %>
+<% if current_user && current_user.admin %>
   <h3>Admin Only</h3>
   <p><%= link_to "Edit", edit_product_path(@product) %></p>
   <p><%= link_to "Delete product", product_path(@product),
