Continue to try to test authentication and also how to test CRUD functionality that has been locked out by admin privleges

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :email %>
   <%= f.label "Password" %>
   <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
+  <%= f.label "Password confirmation" %>
   <%= f.password_field :password_confirmation %>
   <%= f.label "Admin?" %>
   <%= f.check_box:admin %>
