--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MariosSpecialty</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+    <title>Mario's Specialty Foods</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+    <%= render "layouts/header" %>
+    <%= render "layouts/navbar" %>
+
     <div class="container">
+
       <% if current_user %>
         <%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
       <% else %>
         <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin' %>
       <% end %>
+
+
 
       <%= flash[:alert] %>
       <%= flash[:notice] %>
