Move authentication to proper position in upper left and add search bar to navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,12 @@
   min-width: 400px;
   font-family: 'Snell Roundhand', cursive;
 }
+.authentication-text {
+  display: inline-block;
+}
+
+.authentication-position {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+}
