--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,14 @@
     <div class="header-container">
       <%= image_tag 'magalie-de-preux-wGEtPYgFWP8-unsplash-crop.jpg', class: 'header-image', alt: 'Picture of exotic fruits and nuts' %>
       <div class="header-top-left">Mario's Specialty Food Products</div>
+      <div class="authentication-position">
+        <% if current_user %>
+          <a class="authentication-text" href="/signout">Sign Out</a>
+          <%= current_user.email %>
+        <% else %>
+          <a class="authentication-text" href="/signin">Sign In</a>
+          <p class="authentication-text"> | </p>
+          <a class="authentication-text" href="/signup">Sign Up</a>
+        <% end %>
+      </div>  
     </div>
