Fix issue with navbar links, change header fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,24 @@
 
  
  
- // Custom Boostratp Variables must be imported before bootstrap
- @import "bootstrap";
+// Custom Boostratp Variables must be imported before bootstrap
+@import "bootstrap";
+
+// General Text Styles
 
 @font-face {font-family: "Snell Roundhand"; src: url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.eot"); src: url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.woff") format("woff"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.svg#Snell Roundhand") format("svg"); } 
+
+@mixin headings {
+  h1, h2, h3,
+  h4, h5, h6 {
+      @content;
+  }
+}
+
+@include headings {
+  font-family: 'Snell Roundhand';
+}
+
 
 // Header styles
 
@@ -60,10 +74,3 @@
 }
 
 
-// Navbar Styles
-
-.navbar-search {
-  float: right;
-  clear: right;
-  vertical-align: 45px;
-}
