--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,14 +5,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item nav-link active" <%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="products#index">Products</a>
+      <li class="nav-item nav-link active" <%= 'active' if current_page?(products_path) %>"><%= link_to "Products", products_path %>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="reviews#index">Reviews</a>
+      <li class="nav-item nav-link active" <%= 'active' if current_page?(reviews_path) %>"><%= link_to "Reviews", reviews_path %>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
