Add Pagination to indexes

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,3 +15,5 @@
   <h3>Admin Only</h3>
   <p><%= link_to "Create new product", new_product_path %></p>
 <% end %>
+
+<%= will_paginate @products %>
