--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,8 @@
   margin-right: auto;
   min-width: 400px;
   width: 100%;
-  height: auto;
+  height: 400px;
+  object-fit: cover;
   opacity: 0.35;
 }
 
@@ -100,3 +101,17 @@
   border-radius: .3rem;
 }
 
+.card {
+  width: 275px;
+  height: 290px;
+  background-color: white;
+  padding: 0.5% 0% 0% 0%;
+  padding-bottom: 15px;
+  border-radius: 5px;
+  border: 1.5px solid #CBCBCB;
+  border-top: 3px solid #36b555;
+  text-align: center;
+  float: left;
+  margin-bottom: 4%;
+  margin-right: 4%;
+}
