--- a/app/views/pages/_newest-product-card.html.erb
+++ b/app/views/pages/_newest-product-card.html.erb
@@ -1,5 +1,8 @@
-<div class="card">
-  <h2><%= newest_product.name %></h2>
-  <p>$<%= newest_product.price %></p>
-  <p>Imported From <%= newest_product.country %></p>
-</div>
+
+<% @newest_products.each do |newest_product| %>
+  <div class="card">
+    <h2><%= newest_product.name %></h2>
+    <p>$<%= newest_product.price %></p>
+    <p>Imported From <%= newest_product.country %></p>
+  </div>
+<% end %>  
