--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,28 +3,22 @@
     <h1>Welcome to Mario's</h1>
     <p>Exotic tastes for the discerning palet</p>
   </div>
+
+  <div class="products">
     <% if @most_reviews.any? %>
       <h2>Most Reviewed Products</h2>
-      <div class="products">
-        <ul>
-          <% @most_reviews.each do |most_review| %>
-            <li><%= link_to most_review.name, product_path(most_review) %></li>
-          <% end %>
-        </ul>
-      </div>
+
+      <%= render "pages/newest-product-card" %>
+
     <% else %>
       <p>There are no most recent reviews (yet).</p>
     <% end %>
 
     <% if @newest_products.any? %>
       <h2>Newest Products</h2>
-      <div class="products">
-        <ul>
-          <% @newest_products.each do |newest_product| %>
-            <li><%= link_to newest_product.name, product_path(newest_product) %></li>
-          <% end %>
-        </ul>
-      </div>
+
+      <%= render "pages/newest-product-card" %>
+      
     <% else %>
       <p>There are no newest products (yet).</p>
     <% end %>
@@ -41,5 +35,7 @@
     <% else %>
       <p>There are no newest products (yet).</p>
     <% end %>
+
+  </div>  
 
 </div>
