--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,11 +2,13 @@
 
 <% if @products.any? %>
   <h2>All Products</h2>
-  <ul>
-    <% @products.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
+  <div class="products">
+    <ul>
+      <% @products.each do |product| %>
+        <li><%= link_to product.name, product_path(product) %></li>
+      <% end %>
+    </ul>
+  </div>
 <% else %>
   <p>There are no products yet.</p>
 <% end %>
