Switch to woff font and added to pre-compile for faster load times

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,14 +13,19 @@
  */
 
 
- 
+//  app/assets/fonts/SnellRoundhandScriptV1.woff
  
 // Custom Boostratp Variables must be imported before bootstrap
 @import "bootstrap";
 
 // General Text Styles
 
-@font-face {font-family: "Snell Roundhand"; src: url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.eot"); src: url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.woff") format("woff"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/31ed0189fe1ff1e740a652e0f75b77dc.svg#Snell Roundhand") format("svg"); } 
+@font-face {
+  font-family:'SnellRoundhand';
+  src: font-url('SnellRoundhandScriptV1.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @mixin headings {
   h1, h2, h3,
@@ -30,7 +35,7 @@
 }
 
 @include headings {
-  font-family: 'Snell Roundhand';
+  font-family: 'SnellRoundhand';
 }
 
 
@@ -62,7 +67,7 @@
   font-size: 6vw;
   line-height: 65px;
   min-width: 400px;
-  font-family: 'Snell Roundhand', cursive;
+  font-family: 'SnellRoundhand', cursive;
 }
 .authentication-text {
   display: inline-block;
@@ -94,7 +99,7 @@
 }
 
 .products > h2 {
-  grid-column: none;
+  grid-column: 1 / -1;
   color: red;
 }
 
