Replaced header image jpg with webp for faster load time

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
     <div class="header-container">
-      <%= image_tag 'magalie-de-preux-wGEtPYgFWP8-unsplash-crop.jpg', class: 'header-image', alt: 'Picture of exotic fruits and nuts' %>
+      <%= image_tag 'magalie-de-preux-wGEtPYgFWP8-unsplash-crop.webp', class: 'header-image', alt: 'Picture of exotic fruits and nuts' %>
       <div class="header-top-left">Mario's Specialty Food Products</div>
       <div class="authentication-position">
         <% if current_user %>
