--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container">
   <div class="welcome-sub-header">
     <h1>Welcome to Mario's</h1>
-    <p>Exotic tastes for the discerning palet</p>
+    <h4>Exotic tastes for the discerning palet</h4>
   </div>
 
   <div class="products">
