--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,13 @@
   font-family: 'SnellRoundhand';
 }
 
+a {
+  color: #000000;
+}
 
+a span {
+  color: #000000;
+}
 // Header styles
 
 
@@ -81,12 +87,22 @@
 
 // Footer Styles
 
+// Navbar Styles
+
 // Home Page Styles
 
 .welcome-sub-header {
   text-align: center;
 }
 
+.welcome-sub-header > h1 {
+  font-size: 50px;
+}
+
+.welcome-sub-header > h4 {
+  font-size: 30px;
+  color: rgba(37, 37, 37, 0.416);
+}
 
 // UL to cards
 
@@ -99,7 +115,7 @@
 }
 
 .products > h2 {
-  grid-column: 1 / -1;
+  grid-row: 1 / -1;
   color: red;
 }
 
