--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,10 @@
   <%= f.password_field :password,  id: 'registration_password' %>
   <%= f.label "Password confirmation" %>
   <%= f.password_field :password_confirmation,  id: 'reg_password_confirm' %>
+  <br>
+  <%= f.label "Upload Avatar Image" %>  
+  <%= f.file_field :avatar_pic  %>
+  <br>
   <%= f.label "Admin?", name: 'admin_check', id: 'admin_check' %>
   <%= f.check_box:admin %>
   <br>
