--- a/app/views/layouts/_product_form.html.erb
+++ b/app/views/layouts/_product_form.html.erb
@@ -7,5 +7,7 @@
     <%= f.text_field :price %>
     <%= f.label :country %>
     <%= f.text_field :country %>
+    <%= f.label :product_photo %>
+    <%= f.file_field :product_photo %>
     <%= f.submit  %>
   <% end %>
