--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,6 +121,7 @@ a span {
   }
   
   & > ul > li {
+    font-family: 'SnellRoundhand';
     border: 1px solid #ccc;
     border-radius: .3rem;
   }
@@ -128,8 +129,8 @@ a span {
 }
 
 .card {
-  width: 275px;
-  height: 290px;
+  width: 375px;
+  height: 415px;
   background-color: white;
   padding: 0.5% 0% 0% 0%;
   padding-bottom: 15px;
@@ -140,4 +141,34 @@ a span {
   float: left;
   margin-bottom: 4%;
   margin-right: 4%;
+}
+
+.card-image {
+  padding: 1px;
+  border-radius: 3px;
+  width: 373px;
+  height: 373px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  // min-width: 400px;
+  // width: 100%;
+  // height: 400px;
+  object-fit: cover;
+}
+
+.card-image-not-found {
+  padding: 1px;
+  border-radius: 3px;
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  // display: block;
+  // margin-left: auto;
+  // margin-right: auto;
+  // min-width: 400px;
+  // width: 100%;
+  // height: 400px;
 }
