--- a/app/views/products/_product-card.html.erb
+++ b/app/views/products/_product-card.html.erb
@@ -1,12 +1,13 @@
-<ul>
-  <% @products.each do |product| %>
-    <div class="card">
-      <li><%= link_to product.name, product_path(product) %></li>
-      <p>$<%= product.price %></p>
-      <p>Imported From <%= product.country  %></p>
-      <% if product.product_photo.attached? %>
-        <%= image_tag product.product_photo %>
-      <% end %>
-    </div>
-  <% end %>  
-</ul>
+
+<% @products.each do |product| %>
+  <div class="card">
+    <h2><%= link_to product.name, product_path(product) %></h2>
+    <p>$<%= product.price %></p>
+    <p>Imported From <%= product.country  %></p>
+    <% if product.product_photo.attached? %>
+      <%= image_tag product.product_photo, class:"card-image" %>
+      <% else %>
+      <%= image_tag 'image_not_available.webp', class:"card-image-not-found", alt: 'Image Not Found ' %>
+    <% end %>
+  </div>
+<% end %>  
