--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,7 +133,7 @@ a span {
   height: 415px;
   background-color: white;
   padding: 0.5% 0% 0% 0%;
-  padding-bottom: 15px;
+  padding-bottom: 1px;
   border-radius: 5px;
   border: 1.5px solid #CBCBCB;
   border-top: 3px solid #36b555;
@@ -145,21 +145,20 @@ a span {
 
 .card-image {
   padding: 1px;
-  border-radius: 3px;
+  border-radius: 5px;
   width: 373px;
-  height: 373px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  height: 100%;
+  object-fit: cover;
+  // // display: block;
+  // margin-left: auto;
+  // margin-right: auto;
   // min-width: 400px;
   // width: 100%;
   // height: 400px;
-  object-fit: cover;
 }
 
 .card-image-not-found {
   padding: 1px;
-  border-radius: 3px;
   width: 200px;
   display: block;
   margin-left: auto;
