--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,7 @@ a span {
   right: 10px;
 }
 
+
 // Footer Styles
 
 // Navbar Styles
@@ -170,4 +171,10 @@ a span {
   // min-width: 400px;
   // width: 100%;
   // height: 400px;
+}
+
+// Product Page Styles
+
+.centered-header {
+  text-align: center;
 }
