--- a/app/views/pages/_most-reviews-card.html.erb
+++ b/app/views/pages/_most-reviews-card.html.erb
@@ -1,9 +1,9 @@
 
-<% @most_reviews.each do |most_reviews| %>
+<% @most_reviews.each do |most_review| %>
   <div class="card">
-    <h2><%= most_reviews.name %></h2>
-    <p>$<%= most_reviews.price %></p>
-    <p>Imported From <%= most_reviews.country %></p>
+    <h2><%= link_to most_review.name, product_path(most_review)%></h2>
+    <p>$<%= most_review.price %></p>
+    <p>Imported From <%= most_review.country %></p>
 
   </div>
 <% end %>  
