--- a/app/views/pages/_newest-product-card.html.erb
+++ b/app/views/pages/_newest-product-card.html.erb
@@ -1,7 +1,7 @@
 
 <% @newest_products.each do |newest_product| %>
   <div class="card">
-    <h2><%= newest_product.name %></h2>
+    <h2><%= link_to newest_product.name, product_path(newest_product) %></h2>
     <p>$<%= newest_product.price %></p>
     <p>Imported From <%= newest_product.country %></p>
   </div>
