--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing User</h1>
+<h1>Update Profile</h1>
 
-<%= render 'form', user: @user %>
+<%= render "users/form_new_user" %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+
