Style user profile page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Update Profile</h1>
+<h1 class="center">Update Profile</h1>
 
-<%= render "users/form_new_user" %>
+<%= render "users/form_edit_user" %>
 
 
