--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,8 +45,12 @@ a {
 a span {
   color: #000000;
 }
-// Header styles
 
+.center {
+  text-align: center;
+}
+
+// Header styles
 
 .header-container {
   position: relative;
@@ -196,8 +200,25 @@ a span {
   text-align: center;
 }
 
-// Forms 
+// User Forms
 
-.form-white-space {
-  white-space: pre-wrap;
+.user-form-grid-container {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "left-col right-col";
+  // grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.form-col-2 {
+  grid-area: left-col;
+  border: 1px;
+}
+
+.form-col-1 {
+  grid-area: right-col;
+  border: 1px;
 }
