--- a/app/views/users/_form_edit_user.html.erb
+++ b/app/views/users/_form_edit_user.html.erb
@@ -2,7 +2,12 @@
   <%= form_for @user do |f| %>
     <div class="user-form-grid-container">
       <div class="form-col-1">
-        <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
+        <% if current_user.avatar_pic.attached? %>
+          <%= image_tag current_user.avatar_pic, class:"avatar" %><br>
+          <% else %>
+          <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
+        <% end %>
+
         <%= f.label "Upload Avatar Image" %><br>
         <%= f.file_field :avatar_pic %><br>
       </div>
