--- a/app/views/users/_form_new_user.html.erb
+++ b/app/views/users/_form_new_user.html.erb
@@ -6,7 +6,9 @@
         <%= f.label "Upload Avatar Image" %><br>
         <%= f.file_field :avatar_pic %><br>
       </div>
-      <div class="form-col-2">  
+      <div class="form-col-2">
+        <%= f.label "User Name" %>
+        <%= f.text_field :user_name, id: 'user_name' %><br>  
         <%= f.label "Email" %>
         <%= f.text_field :email, id: 'registration_email' %><br>
         <%= f.label "Password" %>
