--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,20 @@
-<p id="notice"><%= notice %></p>
+<h1 class="center">Your Profile</h1>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+  <% if current_user.avatar_pic.attached? %>
+    <%= image_tag current_user.avatar_pic, class:"avatar" %><br>
+    <% else %>
+    <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
+  <% end %>
+
+  <p>User Name: <%= @user.user_name %></p>
+  <p>Email: <%= @user.email %></p><br><br><br>
+  
+
+<% if current_user %>
+  <div class="centered-header">
+    <%= link_to 'Edit', edit_user_path(@user) %> |
+    <%= link_to 'Home', root_path %>
+  </div>
+<% end %>
+
+
