--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -1,7 +1,10 @@
         
-          
-          <% if current_user.avatar_pic.attached? %>
-            <%= image_tag current_user.avatar_pic, class:"avatar" %>
-            <% else %>
-            <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %>
-          <% end %>
+  def update
+    @user = User.find(params[:id])
+    if @review.update(params)
+      flash[:notice] = "Profile successfully updated!"
+      redirect_to user_path(@user.user)
+    else
+      render :edit
+    end
+  end
