Automatically incorporate user name into reviews

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
 // Custom Boostratp Variables must be imported before bootstrap
 @import "bootstrap";
 
+// custom Stylesheet Import links
+
+@import "will_paginate.scss";
+
 // General Text Styles
 
 @font-face {
@@ -220,5 +224,25 @@ a span {
 
 .form-col-1 {
   grid-area: right-col;
+  border: 1px;
+}
+
+// Reviews Styles
+
+.reviews-container {
+  white-space: nowrap;
+}
+
+.reviews-ul {
+  list-style-type: none;
+}
+
+.reviews-li {
+  display: inline-block;
+}
+
+.review-card {
+  width: 500px;
+  height: 100ps;
   border: 1px;
 }
