--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -5,12 +5,14 @@
 <h2>Product: <%= @product.name %></h2>
 <h3>Rating: <%= @review.rating %> of 5 stars</h3>
 <h3>Review:</h3>
-<p><%= @review.content_body %></p>
+<p><%= @review.content_body %></p><br><br><br>
 
 <% if current_user && current_user.admin %>
   <h3>Admin Only</h3>
-  <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
-  <p><%= link_to "Delete review", product_review_path(@product, @review),
-                          :data => {:confirm => "Are you sure?",
-                          :method => "delete"} %></p>
+  <div class="centered-header">
+    <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
+    <p><%= link_to "Delete review", product_review_path(@product, @review),
+                            :data => {:confirm => "Are you sure?",
+                            :method => "delete"} %></p>
+  </div>                          
 <% end %>
