--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -11,7 +11,7 @@
               <% else %>
                 <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
             <% end %>
-          <li><%= link_to review.author, review_path(review), class:"reviews-li" %></li> 
+          <li><%= link_to review.author, review_path(id: review, product_id: review.product_id), class:"reviews-li" %></li> 
         <% end %>
       </div>  
     </ul>
