--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,6 +1,11 @@
-<% if @user.avatar_pic.attached? %>
-  <%= image_tag @user.avatar_pic %>
+
+<% _user = User.find_by(id: @review.user_id) %>
+<% if _user.avatar_pic.attached? %>
+  <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
+  <% else %>
+    <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
 <% end %>
+
 <h1>Review: <%= @review.author %></h1>
 <h2>Product: <%= @product.name %></h2>
 <h3>Rating: <%= @review.rating %> of 5 stars</h3>
