Styled pagination css to mimic boostrap

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,4 +17,6 @@
     <p><%= link_to "Create new product", new_product_path %></p>
   <% end %>
 
+<div class="pagination">
   <%= will_paginate @products %>
+</div>
