--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,7 +35,9 @@
   <p>No reviews are listed for this product.</p>
 <% end %>
 
-<%= will_paginate @product_reviews %>
+<div class="pagination">
+  <%= will_paginate @product_reviews %>
+</div>
 
   </div>
 
