--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -19,4 +19,6 @@
     <p>There are no reviews yet.</p>
   <% end %>
 </div>
-<%= will_paginate @reviews%>
+<div class="pagination">
+  <%= will_paginate @reviews%>
+</div>
