--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,7 +162,7 @@ a span {
   padding-bottom: 1px;
   border-radius: 5px;
   border: 1.5px solid #CBCBCB;
-  border-top: 3px solid #36b555;
+  border-top: 3px solid #419234;
   text-align: center;
   float: left;
   margin-bottom: 4%;
@@ -249,4 +249,55 @@ a span {
 
 // Will Paginate Styling
 
+.pagination {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:fit-content;
+  background: white;
+  cursor: default;
+  /* self-clearing method: */ }
+  .pagination a, .pagination span, .pagination em {
+    padding: 0.2em 0.5em;
+    display: block;
+    float: left;
+    margin-right: 1px; }
+  .pagination .disabled {
+    color: #999999;
+    border: 1px solid #dddddd; }
+  .pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    background: #419234;
+    color: white;
+    border: 1px solid #419234; }
+  .pagination a {
+    text-decoration: none;
+    color: #288a40;
+    border: 1px solid #4d8647; }
+    .pagination a:hover, .pagination a:focus {
+      color: #152519;
+      border-color: #152519; }
+  .pagination .page_info {
+    background: #419234;
+    color: white;
+    padding: 0.4em 0.6em;
+    width: 22em;
+    margin-bottom: 0.3em;
+    text-align: center; }
+    .pagination .page_info b {
+      color: #152519;
+      background: #4d8647;
+      padding: 0.1em 0.25em; }
+  .pagination:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
+  * html .pagination {
+    height: 1%; }
+  *:first-child + html .pagination {
+    overflow: hidden; 
+}
 
