--- a/app/views/users/_form_edit_user.html.erb
+++ b/app/views/users/_form_edit_user.html.erb
@@ -4,6 +4,8 @@
       <div class="form-col-1">
         <% if current_user.avatar_pic.attached? %>
           <%= image_tag current_user.avatar_pic, class:"avatar" %><br>
+          <%= f.label :remove_avatar %>
+          <%= f.check_box :remove_avatar %><br>
           <% else %>
           <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
         <% end %>
@@ -20,8 +22,11 @@
         <%= f.password_field :password,  id: 'registration_password' %><br>
         <%= f.label "Password confirmation" %>
         <%= f.password_field :password_confirmation,  id: 'reg_password_confirm' %><br>
-        <%= f.label "Admin?", name: 'admin_check', id: 'admin_check', class: "form-col-1" %>
-        <%= f.check_box:admin %><br>
+        <% if current_user && current_user.admin %>
+           <h3>Admin Only</h3>
+            <%= f.label "Admin?", name: 'admin_check', id: 'admin_check', class: "form-col-1" %>
+            <%= f.check_box:admin %><br>
+        <% end %>
         <%= f.submit "Submit" %><br>
       </div>
     </div>
