--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @product.name %></h1>
+<p>Average Rating: <%= @product.average_review %></p>
 <p>$<%= @product.price %></p>
 <p>Imported From <%= @product.country %></p>
 
