Change the five start rating to actual stars

--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -1,1 +1,18 @@
-        
+    <%= f.collection_radio_buttons :rating, [[1], [2], [3], [4], [5]], :first, :last, collection_wrapper_class: 'rating', item_wrapper_class: 'rating', boolean_style: :inline do |b| %>
+    <%= b.label {'☆'} %>         
+
+
+
+<p>Rating </P>
+<div class="rating"> 
+  <input type="radio" name="rating" value="5" id="5">
+  <label for="5">☆</label> 
+  <input type="radio" name="rating" value="4" id="4">
+  <label for="4">☆</label> 
+  <input type="radio" name="rating" value="3" id="3">
+  <label for="3">☆</label> 
+  <input type="radio" name="rating" value="2" id="2">
+  <label for="2">☆</label> 
+  <input type="radio" name="rating" value="1" id="1">
+  <label for="1">☆</label>
+</div>
