--- a/app/views/layouts/_review_form.html.erb
+++ b/app/views/layouts/_review_form.html.erb
@@ -2,8 +2,21 @@
 
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :content_body %>
-  <%= f.text_area :content_body %>
-  <%= f.label :rating %>
-  <%= f.text_field :rating %>
+  <%= f.text_area :content_body %><br>
+    <%= f.label :rating %>
+  <div class='rating'>
+    <%= f.radio_button(:rating, 5) %>
+    <%= f.label(:rating_5, '☆') %>
+    <%= f.radio_button(:rating, 4) %>
+    <%= f.label(:rating_4, '☆') %>
+    <%= f.radio_button(:rating, 3) %>
+    <%= f.label(:rating_3, '☆') %>
+    <%= f.radio_button(:rating, 2) %>
+    <%= f.label(:rating_2, '☆') %>
+    <%= f.radio_button(:rating, 1) %>
+    <%= f.label(:rating_1, '☆') %>
+  </div>
+
+
   <p><%= f.submit %></p>
-<% end %>
+  <% end %>
