--- a/app/views/products/_product-card.html.erb
+++ b/app/views/products/_product-card.html.erb
@@ -2,6 +2,7 @@
 <% @products.each do |product| %>
   <div class="card">
     <h2><%= link_to product.name, product_path(product) %></h2>
+    <div class="stars" style="--rating: <%= product.average_review %>;" aria-label="Rating of this product is " <%= product.average_review %> " out of 5."></div>
     <p>$<%= product.price %></p>
     <p>Imported From <%= product.country  %></p>
     <% if product.product_photo.attached? %>
