--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @product.name %></h1>
-<p>Average Rating: <%= @product.average_review %></p>
+<p>Average Rating:</p>
+<div class="stars" style="--rating: <%= @product.average_review %>;" aria-label="Rating of this product is " <%= @product.average_review %> " out of 5."></div>
 <p>$<%= @product.price %></p>
 <p>Imported From <%= @product.country %></p>
 
