--- a/app/views/pages/_newest-product-card.html.erb
+++ b/app/views/pages/_newest-product-card.html.erb
@@ -2,10 +2,17 @@
 <% @newest_products.each do |newest_product| %>
   <div class="card">
     <h2><%= link_to newest_product.name, product_path(newest_product) %></h2>
-    <div class="stars" style="--rating: <%= newest_product.average_review %>;" aria-label="Rating of this product is " <%= newest_product.average_review %> " out of 5."></div>
+    <div 
+      class="stars" style="--rating: 
+      <%= newest_product.average_review %>
+      ;"aria-label="Rating of this product is " 
+      <%= newest_product.average_review %>
+       " out of 5.">
+    </div>
+
     <p>$<%= newest_product.price %></p>
     <p>Imported From <%= newest_product.country %></p>
-    <p>Introduced <%= newest_product.created_at %></p>
+    <p>Introduced <%= newest_product.created_at.strftime('%F') %></p>
     <% if newest_product.product_photo.attached? %>
       <%= image_tag newest_product.product_photo, class:"card-image" %>
       <% else %>
