--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -16,3 +16,5 @@
   <input type="radio" name="rating" value="1" id="1">
   <label for="1">☆</label>
 </div>
+
+<%= link_to "Next Review", @review.next, @product.id %>
