--- a/app/views/pages/_most-reviews-card.html.erb
+++ b/app/views/pages/_most-reviews-card.html.erb
@@ -3,9 +3,13 @@
   <div class="card">
     <h2><%= link_to most_review.name, product_path(most_review)%></h2>
     <div class="stars" style="--rating: <%= most_review.average_review %>;" aria-label="Rating of this product is " <%= most_review.average_review %> " out of 5."></div>
-    <p>$<%= most_review.price %></p>
-    <p>Imported From <%= most_review.country %></p>
-    <p>Number of Reviews <%= most_review.reviews_count %>
+    <p>$<%= most_review.price %> per lb</p>
+    <div class="card-text-up-most-rev">
+      <p>Imported From <%= most_review.country %></p>
+    </div>
+    <div class="card-text-up">
+      <p><%= most_review.reviews_count %> Reviews</p>
+    </div>
     <% if most_review.product_photo.attached? %>
       <%= image_tag most_review.product_photo, class:"card-image" %>
       <% else %>
