--- a/app/views/products/_product-card.html.erb
+++ b/app/views/products/_product-card.html.erb
@@ -3,8 +3,10 @@
   <div class="card">
     <h2><%= link_to product.name, product_path(product) %></h2>
     <div class="stars" style="--rating: <%= product.average_review %>;" aria-label="Rating of this product is " <%= product.average_review %> " out of 5."></div>
-    <p>$<%= product.price %></p>
-    <p>Imported From <%= product.country  %></p>
+    <p>$<%= product.price %> per lb</p>
+    <div class="card-text-up">
+      <p>Imported From <%= product.country  %></p>
+    </div>
     <% if product.product_photo.attached? %>
       <%= image_tag product.product_photo, class:"card-image" %>
       <% else %>
